--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ dependencies {
     testCompile group: 'org.testng', name: 'testng', version: '6.14.2'
     compile group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
     compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.0.0-alpha-4'
+    // https://mvnrepository.com/artifact/com.aventstack/extentreports
+    compile group: 'com.aventstack', name: 'extentreports', version: '3.0.0'
 }
 
 test{
